syntax = "proto3";

package blockexplorer.api.v1;

option go_package = "code.vegaprotocol.io/vega/protos/blockexplorer/api/v1";
import "vega/commands/v1/transaction.proto";

service BlockExplorerService {
    rpc ListTransactions(ListTransactionsRequest) returns (ListTransactionsResponse) {}
 }

message ListTransactionsRequest {
    uint32 limit = 1;
    optional string before = 2;
    optional string after = 3;
    map<string, string> filters =4;
}

message ListTransactionsResponse{
    repeated Transaction transactions = 3;
}

message Transaction {
    uint64 block = 1;
    uint32 index = 2;
    string hash = 3;
    string submitter = 4;
    string type = 5;
    uint32 code = 6;
    string cursor = 7;
    vega.commands.v1.InputData command = 8;
}

// Copypasta [there must be a better way?] from
// https://github.com/tendermint/tendermint/blob/main/proto/tendermint/abci/types.proto

message TxResult {
    int64             height = 1;
    uint32            index  = 2;
    bytes             tx     = 3;
    ResponseDeliverTx result = 4;
  }

  message ResponseDeliverTx {
    uint32         code       = 1;
    bytes          data       = 2;
    string         log        = 3;  // nondeterministic
    string         info       = 4;  // nondeterministic
    int64          gas_wanted = 5 [json_name = "gas_wanted"];
    int64          gas_used   = 6 [json_name = "gas_used"];
    repeated Event events     = 7;  // nondeterministic
    string codespace = 8;
  }

  message Event {
    string                  type       = 1;
    repeated EventAttribute attributes = 2;
  }

// EventAttribute is a single key-value pair, associated with an event.
message EventAttribute {
    string key   = 1;
    string value = 2;
    bool   index = 3;  // nondeterministic
}
